Version 0.5.0 (2010-10-31)

  - maildirproc is now a Python 3.x project. Install maildirproc-python2 for
    Python 2.x compatibility.

Version 0.4.3 (2010-05-03)

  - Logs are now printed to the log file in a safe way even if the log string
    doesn't fit within the destination character set.

Version 0.4.2 (2010-04-11)

  - Improved robustness for erroneously encoded headers when running Python
    3.x.
  - Fixed problem with logging to stdout when running Python 3.x.

Version 0.4.1 (2008-12-31)

  - Improved robustness for erroneously encoded headers.
  - Made it possible to log non-ASCII characters from the RC file.

Version 0.4 (2008-12-30)

  - Added support for Python 3.0.
  - Dropped support for Python 2.4.
  - Improved support for character handling. Unicode strings are now
    used for all text handling.
  - Improved handling of headers spanning several lines.
  - Improved documentation style sheet.

Version 0.3 (2008-02-23)

  - The maildir base directory now defaults to the current working
    directory.
  - Improved error handling for missing configuration file.
  - Improved error handling for badly encoded mail headers.
  - Made the program exit with an error code and print an error
    message to stderr when a fatal error has occurred.
  - Minor improvements of the documentation.

Version 0.2 (2007-07-10)

  - Added feature that (if enabled) reloads the rc file when it has
    been modified.
  - Improved documentation and examples.
  - Moving and copying of mail now preserve mail flags. Contributed by
    Daniele Pizzolli.

Version 0.1.2 (2006-12-28)

  - Made handling of mail headers more robust so that badly encoded
    headers don't produce a crash.
  - Improved documentation.
  - Made the mailing list header "Mailing-List" recognized in the
    from_mailing_list method of the Mail class.

Version 0.1.1 (2006-06-20)

  - Fixed race condition: Mail file opening for SHA1 calculation is
    now more robust.
  - Improved documentation.
